WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131187
ASSERT(m_children.isEmpty()) in PlatformCALayerRemote::removeAllSublayers() on time.com
https://bugs.webkit.org/show_bug.cgi?id=131187
Summary
ASSERT(m_children.isEmpty()) in PlatformCALayerRemote::removeAllSublayers() o...
Simon Fraser (smfr)
Reported
2014-04-03 15:59:46 PDT
ASSERT(m_children.isEmpty()) in PlatformCALayerRemote::removeAllSublayers() on time.com
Attachments
Patch
(2.31 KB, patch)
2014-04-03 16:01 PDT
,
Simon Fraser (smfr)
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-04-03 16:01:54 PDT
Created
attachment 228553
[details]
Patch
Maciej Stachowiak
Comment 2
2014-04-03 16:13:53 PDT
Comment on
attachment 228553
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2014-04-03 16:29:22 PDT
https://trac.webkit.org/r166753
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug